--- a/main.css
+++ b/main.css
@@ -11,7 +11,17 @@ body {
     padding: 0;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
-    background: rgb(214, 233, 255);
+    /* background: rgb(214, 233, 255); */
+}
+
+header {
+    padding: 4rem 0 0.5rem 0;
+    text-align: center;
+}
+
+header a {
+    display: inline-block;
+    border-bottom: 0;
 }
 
 h1,
@@ -23,9 +33,15 @@ h2 {
     font-size: 6rem;
     text-align: center;
     letter-spacing: 0;
+    margin: 0;
     font-variation-settings:
         "BLED" 0,
         "SCAN" 1;
+}
+
+h2 {
+    font-size: 4.5rem;
+    margin: 1.5rem 0;
 }
 
 .mono {
@@ -45,6 +61,11 @@ a {
     text-decoration: none;
     border-bottom: 1px solid;
     padding-bottom: 0.125em;
+}
+
+a:hover, 
+a:hover * {
+    color: rgb(79, 27, 8);
 }
 
 main {
@@ -73,9 +94,30 @@ video,
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin: 0 auto;
+    max-width: 53rem;
+    gap: 3rem;
 }
 
-.rotate-1 {
-    transform: rotate(-57deg);
-    margin: 0.375rem auto;
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1.5rem;
+    max-width: 32rem;
+    margin: 0 auto;
+    padding: 2.5rem 1rem 6rem 1rem;
+}
+
+footer p {
+    text-align: right;
+}
+
+@media screen and (max-width: 800px) {
+    .two-column {
+        gap: 0;
+    }
+
+    h2 {
+        font-size: 3rem;
+    }
 }
